test/scc_test/expr/semantic-errors/029.t
void test()
{
    void* a;
    sizeof *a;
}